--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -52,6 +52,8 @@ $tablet-fix-nine-width: 863px; // main
 $tablet-fix-ten-width: 854px; // main
 $tablet-fix-eleven-width: 881px; // main
 $tablet-fix-twelve-width: 880px; // main
+$tablet-fix-thirteen-width: 877px; // main
+$tablet-fix-fourteen-width: 1071px; // main
 $desktop-width: 1200px; // main
 // ширина экрана
 
