--- a/source/sass/blocks/interesting.scss
+++ b/source/sass/blocks/interesting.scss
@@ -53,13 +53,13 @@
   @media (min-width: $tablet-width) {
     font-size: 30px;
 
-    margin-top: -74px;
+    margin-top: -30px;
 
     padding-left: 1px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-top: -96px;
+    margin-top: -52px;
   }
 }
 
@@ -168,5 +168,34 @@
 .interesting__button-special {
   display: flex;
   justify-content: center;
-  margin-top: -45px;
+
+  margin-top: -2px;
+
+  position: relative;
+  top: 16px;
+
+  @-moz-document url-prefix("") {
+    position: relative;
+    top: 16px;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: -14px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .interesting__button-special {
+    @-moz-document url-prefix("") {
+      top: 31px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .interesting__button-special {
+    @-moz-document url-prefix("") {
+      top: -14px;
+    }
+  }
 }
