--- a/source/sass/blocks/materials.scss
+++ b/source/sass/blocks/materials.scss
@@ -6,6 +6,7 @@
 
   @media (min-width: $tablet-width) {
     margin-top: -287px;
+    margin-bottom: -66px;
   }
 
   @media (min-width: $desktop-width) {
@@ -743,6 +744,8 @@
   margin-right: auto;
   margin-left: auto;
 
+  z-index: 2;
+
   @media (min-width: $tablet-width) {
     display: block;
 
@@ -760,7 +763,7 @@
     width: 800px;
     max-width: 800px;
     min-width: 800px;
-    min-height: 93px;
+    min-height: 114px;
   }
 }
 
@@ -1128,3 +1131,56 @@
     left: 284px;
   }
 }
+
+.materials__player-fix {
+  display: none;
+
+  @media (min-width: $desktop-width) {
+    display: block;
+
+    width: 100%;
+    min-height: 31px;
+
+    position: relative;
+    bottom: 24px;
+
+    background-color: $white-color;
+
+    z-index: 2;
+  }
+}
+
+// Firefox fix
+
+@media (min-width: $desktop-width) {
+  .materials__player {
+    @-moz-document url-prefix("") {
+      min-height: 114px;
+    }
+  }
+
+  .materials__player-fix {
+    @-moz-document url-prefix("") {
+      display: block;
+
+      width: 100%;
+      min-height: 31px;
+
+      position: relative;
+      bottom: 24px;
+
+      background-color: $white-color;
+
+      z-index: 2;
+    }
+  }
+
+  .materials__header {
+    @-moz-document url-prefix("") {
+      position: relative;
+      right: -5px;
+    }
+  }
+}
+
+// Firefox fix
