--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -8,7 +8,7 @@
   font-style: normal;
   font-weight: normal;
   font-display: swap;
-  src: url("../fonts/ptsans.woff") format("woff"), url("../fonts/ptsans.woff2") format("woff2");
+  src: url("../fonts/ptsans.woff") format("woff"), url("../fonts/ptsans.woff2") format("woff2"), url("https://fonts.googleapis.com/css2?family=PT+Sans");
 }
 // PT Sans
 
@@ -18,7 +18,7 @@
   font-style: normal;
   font-weight: bold;
   font-display: swap;
-  src: url("../fonts/ptsansbold.woff") format("woff"), url("../fonts/ptsansbold.woff2") format("woff2");
+  src: url("../fonts/ptsansbold.woff") format("woff"), url("../fonts/ptsansbold.woff2") format("woff2"), url("https://fonts.googleapis.com/css2?family=PT+Sans");
 }
 // PT Sans Bold
 
