--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -30,6 +30,8 @@ $white-color: #ffffff;
 $grey-color: #eeeeee;
 
 $black-rgba-color: rgba(0, 0, 0, 0.3);
+
+$special-bg-color-without-bg-img: #9892f3;
 // цвет
 
 // специальные цыета для рамок по заданию
