--- a/source/sass/blocks/welcome.scss
+++ b/source/sass/blocks/welcome.scss
@@ -1,5 +1,5 @@
 .welcome {
-  background-color: $lite-grey-color;
+  background-color: $special-bg-color-without-bg-img;
   background-image: url("../img/background-index-mobile-1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -18,7 +18,7 @@
   align-items: center;
 
   @media (min-resolution: 2dppx) {
-    background-color: $lite-grey-color;
+    background-color: $special-bg-color-without-bg-img;
     background-image: url("../img/background-index-mobile-2x.jpg");
     background-size: 901px auto;
   }
@@ -27,7 +27,7 @@
   // outline-offset: -3px; // специальные цыета для рамок по заданию
 
   @media (min-width: $tablet-width) {
-    background-color: $lite-grey-color;
+    background-color: $special-bg-color-without-bg-img;
     background-image: url("../img/background-index-tablet-desktop-1x.jpg");
     background-repeat: no-repeat;
     background-position: center;
@@ -42,7 +42,7 @@
     height: 518px;
 
     @media (min-resolution: 2dppx) {
-      background-color: $lite-grey-color;
+      background-color: $special-bg-color-without-bg-img;
       background-image: url("../img/background-index-tablet-desktop-2x.jpg");
       background-size: 1200px auto;
     }
@@ -52,7 +52,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    background-color: $lite-grey-color;
+    background-color: $special-bg-color-without-bg-img;
     background-image: url("../img/background-index-tablet-desktop-1x.jpg");
     background-repeat: no-repeat;
     background-position: center;
@@ -65,7 +65,7 @@
     height: 518px;
 
     @media (min-resolution: 2dppx) {
-      background-color: $lite-grey-color;
+      background-color: $special-bg-color-without-bg-img;
       background-image: url("../img/background-index-tablet-desktop-2x.jpg");
       background-size: 1200px auto;
     }
